<resources>
    <string name="app_name">Clever Ferret Media Library</string>
    <string name="app_description">Universal Media Library for Android - Manage books, music, movies, and more</string>
    <string name="navigation_library">Library</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_back">Back</string>
    <string name="navigation_home">Home</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_done">Done</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="library_empty">No libraries found</string>
    <string name="library_add_title">Add Library</string>
    <string name="library_name">Library Name</string>
    <string name="library_path">Library Path</string>
    <string name="library_type">Library Type</string>
    <string name="library_books">Books</string>
    <string name="library_movies">Movies</string>
    <string name="library_music">Music</string>
    <string name="library_podcasts">Podcasts</string>
    <string name="media_book">Book</string>
    <string name="media_movie">Movie</string>
    <string name="media_tv_show">TV Show</string>
    <string name="media_music">Music</string>
    <string name="media_podcast">Podcast</string>
    <string name="media_comic">Comic</string>
    <string name="media_document">Document</string>
    <string name="settings_title">Settings</string>
    <string name="settings_api_keys">API Keys</string>
    <string name="settings_integrations">Integrations</string>
    <string name="settings_reader">Reader Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_about">About</string>
    <string name="settings_security">Security</string>
    <string name="api_keys_title">API Keys Manager</string>
    <string name="api_keys_description">Configure metadata APIs</string>
    <string name="api_key_required">Required</string>
    <string name="api_key_optional">Optional</string>
    <string name="api_key_test">Test</string>
    <string name="api_key_valid">Valid</string>
    <string name="api_key_invalid">Invalid</string>
    <string name="api_key_untested">Untested</string>
    <string name="plex_title">Plex Integration</string>
    <string name="plex_description">Manage Plex server connections</string>
    <string name="plex_add_server">Add Server</string>
    <string name="plex_server_name">Server Name</string>
    <string name="plex_server_url">Server URL</string>
    <string name="plex_server_token">Plex Token</string>
    <string name="plex_connecting">Connecting…</string>
    <string name="plex_connected">Connected</string>
    <string name="plex_disconnected">Disconnected</string>
    <string name="plex_sync_all">Sync All</string>
    <string name="plex_enhance_metadata">Enhance Metadata</string>
    <string name="plex_find_duplicates">Find Duplicates</string>
    <string name="plex_create_collections">Create Collections</string>
    <string name="reader_title">Reader</string>
    <string name="reader_font_size">Font Size</string>
    <string name="reader_font_family">Font Family</string>
    <string name="reader_line_spacing">Line Spacing</string>
    <string name="reader_margin">Margin</string>
    <string name="reader_theme">Theme</string>
    <string name="reader_brightness">Brightness</string>
    <string name="video_player_title">Video Player</string>
    <string name="video_play">Play</string>
    <string name="video_pause">Pause</string>
    <string name="video_stop">Stop</string>
    <string name="video_fullscreen">Fullscreen</string>
    <string name="video_subtitles">Subtitles</string>
    <string name="video_audio_track">Audio Track</string>
    <string name="audio_player_title">Audio Player</string>
    <string name="audio_play">Play</string>
    <string name="audio_pause">Pause</string>
    <string name="audio_stop">Stop</string>
    <string name="audio_next">Next</string>
    <string name="audio_previous">Previous</string>
    <string name="audio_shuffle">Shuffle</string>
    <string name="audio_repeat">Repeat</string>
    <string name="media_playback_widget_description">Controls media playback</string>
    <string name="widget_music_player_description">Music player with playback controls</string>
    <string name="widget_audiobook_player_description">Audiobook player with chapter navigation</string>
    <string name="widget_radio_player_description">Radio player for live streaming</string>
    <string name="widget_podcast_player_description">Podcast player with episode controls</string>
    <string name="widget_tts_player_description">Text-to-Speech reader controls</string>
    <string name="widget_comic_reader_description">Quick access to current comic</string>
    <string name="widget_video_player_description">Resume watching your videos</string>
    <string name="widget_currently_reading_description">Shows your current book</string>
    <string name="widget_reading_stats_description">Your reading statistics</string>
    <string name="widget_reading_goal_description">Reading goal progress tracker</string>
    <string name="widget_quick_access_description">Quick access to recent books</string>
    <string name="media_notification_title">Media Player</string>
    <string name="media_notification_unknown_artist">Unknown Artist</string>
    <string name="notification_channel_media_playback">Media Playback</string>
    <string name="notification_channel_media_playback_description">Shows media playback controls</string>
    <string name="media_pause">Pause</string>
    <string name="media_play">Play</string>
    <string name="media_skip_previous">Previous</string>
    <string name="media_skip_next">Next</string>
    <string name="media_stop">Stop</string>
    <string name="error_generic">An error occurred</string>
    <string name="error_network">Network error</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="error_invalid_format">Invalid file format</string>
    <string name="error_loading">Error loading content</string>
    <string name="loading">Loading…</string>
    <string name="loading_library">Loading library…</string>
    <string name="loading_metadata">Loading metadata…</string>
    <string name="loading_content">Loading content…</string>
    <string name="processing">Processing…</string>
    <string name="cd_book_cover">Book cover</string>
    <string name="cd_movie_poster">Movie poster</string>
    <string name="cd_album_art">Album artwork</string>
    <string name="cd_add_button">Add new item</string>
    <string name="cd_edit_button">Edit item</string>
    <string name="cd_delete_button">Delete item</string>
    <string name="cd_menu_button">Menu</string>
    <string name="cd_close_button">Close</string>
    <string name="cd_play_button">Play</string>
    <string name="cd_pause_button">Pause</string>
    <string name="cd_open_category">Open %1$s category</string>
    <string name="format_epub">EPUB</string>
    <string name="format_pdf">PDF</string>
    <string name="format_mobi">MOBI</string>
    <string name="format_mp4">MP4</string>
    <string name="format_mkv">MKV</string>
    <string name="format_mp3">MP3</string>
    <string name="format_flac">FLAC</string>
    <string name="format_cbz">CBZ</string>
    <string name="format_cbr">CBR</string>
    <string name="import_title">Import Library</string>
    <string name="import_calibre">Import from Calibre</string>
    <string name="import_description">Select your library database</string>
    <string name="export_title">Export Library</string>
    <string name="export_description">Export your library data</string>
    <string name="notification_import_progress">Importing library…</string>
    <string name="notification_import_complete">Import completed</string>
    <string name="notification_sync_progress">Syncing with media server…</string>
    <string name="notification_sync_complete">Sync completed</string>
    <string name="about_version">Version</string>
    <string name="about_build">Build</string>
    <string name="about_developer">Developed by CleverFerret Team</string>
    <string name="about_description">Universal Media Library for Android</string>
    <string name="about_license">MIT License</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_author">Author</string>
    <string name="placeholder_description">Description</string>
    <string name="placeholder_year">Year</string>
    <string name="placeholder_genre">Genre</string>
    <string name="placeholder_rating">Rating</string>
    <string name="widget_media_title">CleverFerret Media Widget</string>
    <string name="widget_powered_by">Powered by Jetpack Glance</string>
    <string name="widget_audiobook_title">Audiobook Title</string>
    <string name="widget_author_name">Author Name</string>
    <string name="widget_chapter_info">Chapter 5 of 12</string>
    <string name="widget_rewind_30s">Rewind 30s</string>
    <string name="widget_play_pause">Play/Pause</string>
    <string name="widget_forward_30s">Forward 30s</string>
    <string name="widget_speed_1x">1.0x</string>
    <string name="widget_speed">Speed</string>
    <string name="widget_book_cover">Book Cover</string>
    <string name="widget_book_title">Book Title</string>
    <string name="widget_author">Author</string>
    <string name="widget_progress">0%</string>
    <string name="widget_comic_title">Comic Title</string>
    <string name="widget_issue_number">Issue #42</string>
    <string name="widget_page_info">Page 15 of 24</string>
    <string name="widget_continue_reading">Tap to Continue Reading</string>
    <string name="widget_currently_reading_title">Currently Reading</string>
    <string name="widget_chapter_1_of_10">Chapter 1 of 10</string>
    <string name="widget_artist_name">Artist Name</string>
    <string name="widget_album_name">Album Name</string>
    <string name="widget_previous">Previous</string>
    <string name="widget_next">Next</string>
    <string name="widget_episode_title">Episode Title</string>
    <string name="widget_days_read">0 day streak 🔥</string>
    <string name="widget_tts_title">Book Title</string>
    <string name="widget_sentence_info">Sentence 42 of 150</string>
    <string name="widget_previous_sentence">Previous Sentence</string>
    <string name="widget_next_sentence">Next Sentence</string>
    <string name="widget_video_title">Video Title</string>
    <string name="widget_video_progress">1:25:30 / 2:15:00</string>
    <string name="widget_continue_watching">Tap to Continue Watching</string>
    <string name="widget_track_title">Track Title</string>
    <string name="widget_radio_station">Radio Station</string>
    <string name="widget_genre">Genre</string>
    <string name="widget_now_playing">Now Playing: Song Title</string>
    <string name="widget_podcast_name">Podcast Name</string>
    <string name="widget_reading_stats">Reading Stats</string>
    <string name="widget_books_read_count">Books Read: 0</string>
    <string name="widget_pages_read_count">Pages Read: 0</string>
    <string name="widget_reading_time">Reading Time: 0h</string>
    <string name="widget_episode_progress">45:30 / 1:15:00</string>
    <string name="widget_album_art">Album Art</string>
    <string name="widget_previous_station">Previous Station</string>
    <string name="widget_next_station">Next Station</string>
    <string name="widget_favorite">Favorite</string>
</resources>